backend/k8s/play-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: play-server
  namespace: game-backend
  labels:
    app: play-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: play-server
  template:
    metadata:
      labels:
        app: play-server
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: play-server
        image: rg.nl-ams.scw.cloud/parhsk/play-server:latest
        imagePullPolicy: Always
        ports:
          - name: api
            containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 256Mi
