backend/k8s/play-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: play-server
  namespace: game-backend
  labels:
    app: play-server
spec:
  selector:
    label: play-server
  ports:
    - name: api
      port: 3000
      targetPort: api
      protocol: TCP
